# blog_os

./: .bochsrc  .gitignore  Cargo.toml  README.md
bootloader/: Cargo.toml  Makefile  i686-bootloader.json  link.x
bootloader/.cargo/: config.toml
bootloader/src/: edd.rs  error.rs  macros.rs  main.rs  vga.rs
bootloader/src/edd/: error.rs  mod.rs
bootloader/src/elf/: error.rs  header.rs  mod.rs  program_header.rs  section.rs
bootloader/stage1/: .asm-lsp.toml  boot.asm
common/: Cargo.toml
common/src/: ata.rs  control_registers.rs  error.rs  gdt.rs  idt.rs  ioport.rs  lib.rs  macros.rs  paging.rs  protection.rs  serial.rs  timer.rs  tss.rs  vga.rs
common/src/elf/: error.rs  header.rs  mod.rs  program_header.rs  section.rs
kernel/: Cargo.toml  x86_64-blog_os.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
xtasks/: Cargo.toml
xtasks/src/: main.rs
