[package]
name = "bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
num_enum = { version = "0.7.4", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
zerocopy = { version = "0.8.27", features = ["derive"] }

[[bin]]
name = "bootloader"
test = false
bench = false
